--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,21 @@
 {% endblock %}
 {% load static %}
 {% block content %}
-<h1>Начать тестирование</h1>
+<div class="container">
+    <div class="row">
+        <div class="col" style="text-align: center;">
+            <h1>"Тест из N вопросов"</h1> 
+        </div>       
+    </div>
+    <div class="row">
+        Вам предстоит ответить на N вопросов, для начала введите ваше имя и нажмите "Начать тестирование". 
+    </div>
+    <div class="row">
+        <a class="btn btn-primary btn-block" 
+           href="{% url 'quiz' quiz_id question_id prew_question_id %}" role="button" style="background-color:#3d7daa; color: white;">
+            Начать тестирование 
+        </a>
+    </div>
+</div>
+
 {% endblock %}
