--- a/templates/includes/question.html
+++ b/templates/includes/question.html
@@ -1,25 +1,50 @@
-{{ question.question_text }}
+<div class="container">
+    <div class="row" style="margin-bottom: 50px; text-align: center">
+        <h3>{{ question.question_text }} </h3>
+    </div>
+
+    <div class="row" style="margin-bottom: 20px;">
         <div class="form-check">
             <input class="form-check-input" type="radio" name="answer" id="answer_a" value="A">
-            <label class="form-check-label" for="answer_a">
-                {{question.answer_a}}
-            </label>
-          </div>
-          <div class="form-check">
+                <label class="form-check-label" for="answer_a"> <h2>A</h2>
+                </label> 
+                    <div class="row">
+                        <img alt="" src="{{ question.answer_a }}" style="width: 200px; height: 200px; ">
+                    </div>
+                
+            </div>
+    </div>
+    <div class="row" style="margin-bottom: 20px;">     
+        <div class="form-check">
             <input class="form-check-input" type="radio" name="answer" id="answer_b" value="B">
-            <label class="form-check-label" for="answer_b">
-                {{question.answer_b}}
-            </label>
-          </div>
-          <div class="form-check">
+                <label class="form-check-label" for="answer_b"><h2>B</h2>
+                </label>    
+                    <div class="row">
+                        <img alt="" src="{{ question.answer_b }}" style="width: 200px; height: 200px; ">
+                    </div>
+
+        </div>
+    </div>             
+    <div class="row" style="margin-bottom: 20px;">     
+        <div class="form-check">
             <input class="form-check-input" type="radio" name="answer" id="answer_c" value="C">
-            <label class="form-check-label" for="answer_c">
-                {{question.answer_c}}
-            </label>
-          </div>
-          <div class="form-check">
+                <label class="form-check-label" for="answer_c"><h2>C</h2>
+                </label>
+                    <div class="row">
+                        <img alt="" src="{{ question.answer_c }}" style="width: 200px; height: 200px; ">
+                    </div>
+                
+        </div>
+    </div> 
+    <div class="row" style="margin-bottom: 20px;">     
+        <div class="form-check">
             <input class="form-check-input" type="radio" name="answer" id="answer_d" value="D">
-            <label class="form-check-label" for="answer_d">
-                {{question.answer_d}}
-            </label>
-          </div>
+                <label class="form-check-label" for="answer_d"><h2>D</h2>
+                </label>    
+                    <div class="row">
+                        <img alt="" src="{{ question.answer_d }}" style="width: 200px; height: 200px; ">
+                    </div>
+                
+        </div>
+    </div> 
+</div> 
