--- a/templates/includes/main.html
+++ b/templates/includes/main.html
@@ -10,44 +10,23 @@
 
     <title>{% block title %}Тестирование{% endblock %}</title>
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100" style="background-color: rgb(250, 253, 220);">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
-<!--<div class="d-xs-block d-sm-none">-->
-
-    <!-- панель навигации 
-    <div class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
-        
-    </div>
-    <div class="d-block d-sm-none">
-        <div class="container-fluid">
-            
-        </div>
-    </div> -->
-
-    <!-- часть для контента -->
     ​{% block content %}
+        {% include 'index.html' %}
     {% endblock %}
     
     
   
-    <!--<div class="wrapper flex-grow-1"></div>
+    <div class="wrapper flex-grow-1"></div>
     <footer>
-         подвал
-        <div class="d-block d-sm-none">
-            <div class="container-fluid" style="background-color: rgb(59, 59, 59); margin-top: 25vh;">
-                
-            </div> 
+        <div class="container-fluid" style="background-color: rgb(59, 59, 59); margin-top: 25vh; color: white">
+            Тестовое задание выполнил Цибиков Михаил.
         </div>    
-
-        <div class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
-            <div class="container-fluid" style="background-color: rgb(59, 59, 59); margin-top: 25vh;">
-                
-            </div>    
-        </div>
-    </footer>  -->
+    </footer>  
 
 </body>
 
